# tataru-commerce-service

./: .gitignore  README.md  TODO.md  docker-compose.yml
.github/workflows/: tests.yml
backend/: config.py  db.py  pyproject.toml  scheduler.py
backend/api/: main.py
backend/api/routers/: meta.py  scans.py
backend/scanner/: cache.py  output.py  pricing.py
backend/scanner/api/: garland.py  universalis.py
backend/scanner/data/: seeds.py
backend/scanner/modes/: craft_scan.py  cross_world.py  discover.py  gather_scan.py  scrape_seeds.py  vendor_arbitrage.py
backend/tests/: test_api.py  test_cache.py  test_pricing.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/components/: scan-status-badge.tsx
frontend/src/components/data-table/: column-header.tsx  data-table-pagination.tsx  data-table.tsx
frontend/src/components/layout/: dc-selector.tsx  header.tsx  sidebar.tsx
frontend/src/hooks/: use-dc.ts  use-scans.ts
frontend/src/lib/: api.ts  format.ts
frontend/src/pages/: craft.tsx  cross-world.tsx  dashboard.tsx  discover.tsx  gather.tsx  not-found.tsx  vendor.tsx
frontend/src/types/: api.ts
